--- a/OpenS2S/index.html
+++ b/OpenS2S/index.html
@@ -54,7 +54,7 @@
 
     <div class="column has-text-centered">
         <span class="link-block">
-            <a href="" target="_blank"
+            <a href="https://github.com/CASIA-LM/OpenS2S" target="_blank"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
                 <i class="fab fa-github"></i>
@@ -110,7 +110,7 @@
             <tbody>
             <td style="text-align: center;vertical-align:middle;width: 400px"><audio controls="controls" style="width: 200px;"><source src="case/焦虑-1.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             <td style="text-align: center;vertical-align:middle;width: 400px">怎么办怎么办啊，马上轮到我上台发言了，好想偷偷溜走</td>
-            <td style="text-align: center;vertical-align:middle;width: 400px">焦虑，成年，男性</td>
+            <td style="text-align: center;vertical-align:middle;width: 400px">焦虑，成年，女性</td>
             <td style="text-align: center;vertical-align:middle;width: 400px"><audio controls="controls" style="width: 200px;"><source src="case/焦虑-1-回复.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             <td style="text-align: center;vertical-align:middle;width: 800px">别慌，深呼吸，慢慢来，你准备的很充分。上台后先微笑，再开场白一步步来。实在紧张就喝口水，没人会怪你。加油，你可以的。</td>
             </tr>
