--- a/OpenS2S/index.html
+++ b/OpenS2S/index.html
@@ -35,17 +35,17 @@
     <br>
     <div class="is-size-5">
         <span class="author-block">
-          <h4 style="text-align: center;"><b>Authors: </b>Chen Wang, Tianyu Peng, Wen Yang, Yinan Bai,
-            Guangfu Wang, Jun Lin, </h4>
-          <h4 style="text-align: center;">Lanpeng Jia,
-            Lingxiang Wu, Jinqiao Wang, Chengqing Zong, Jiajun Zhang*</h4>
+          <h4 style="text-align: center;"><b>Authors: </b><sup>1,2</sup>Chen Wang, <sup>1,2,3</sup>Tianyu Peng, <sup>1,2</sup>Wen Yang, <sup>1,2</sup>Yinan Bai,
+            <sup>4</sup>Guangfu Wang, <sup>4</sup>Jun Lin, </h4>
+          <h4 style="text-align: center;"><sup>4</sup>Lanpeng Jia,
+            <sup>1,3</sup>Lingxiang Wu, <sup>1,2,3</sup>Jinqiao Wang, <sup>1,2</sup>Chengqing Zong, <sup>1,2,3</sup>Jiajun Zhang*</h4>
     </div>
     <br>
     <div class="is-size-5 publication-authors">
         <span class="author-block">
-            <h4 style="text-align: center;"> Instite of Automation, Chinese Academy of Sciences</h4>
-            <h4 style="text-align: center;"> School of Artificial Intelligence, University of Chinese Academy of Sciences</h4>
-            <h4 style="text-align: center;"> Wuhan AI Research, GWM AI Lab</h4>
+            <h4 style="text-align: center;"> <sup>1</sup>Instite of Automation, Chinese Academy of Sciences</h4>
+            <h4 style="text-align: center;"> <sup>2</sup>School of Artificial Intelligence, University of Chinese Academy of Sciences</h4>
+            <h4 style="text-align: center;"> <sup>3</sup>Wuhan AI Research, <sup>4</sup>GWM AI Lab</h4>
         </span>
     </div>
 
@@ -72,7 +72,26 @@
             <span>Paper</span>
             </a>
         </span>
+        
+        <span class="link-block">
+            <a href="https://huggingface.co/CASIA-LM/OpenS2S" target="_blank"
+            class="external-link button is-normal is-rounded is-dark">
+            <span class="icon">
+                <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em;">
+            </span>
+            <span>Model</span>
+            </a>
+        </span>
 
+        <span class="link-block">
+            <a href="https://huggingface.co/datasets/CASIA-LM/OpenS2S_Datasets" target="_blank"
+            class="external-link button is-normal is-rounded is-dark">
+            <span class="icon">
+                <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="HF" style="height: 1em;">
+            </span>
+            <span>Dataset</span>
+            </a>
+        </span>
     </div>
 </div>
 
@@ -110,7 +129,7 @@
             <tbody>
             <td style="text-align: center;vertical-align:middle;width: 400px"><audio controls="controls" style="width: 200px;"><source src="case/焦虑-1.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             <td style="text-align: center;vertical-align:middle;width: 400px">怎么办怎么办啊，马上轮到我上台发言了，好想偷偷溜走</td>
-            <td style="text-align: center;vertical-align:middle;width: 400px">焦虑，成年，女性</td>
+            <td style="text-align: center;vertical-align:middle;width: 400px">焦虑，成年，男性</td>
             <td style="text-align: center;vertical-align:middle;width: 400px"><audio controls="controls" style="width: 200px;"><source src="case/焦虑-1-回复.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             <td style="text-align: center;vertical-align:middle;width: 800px">别慌，深呼吸，慢慢来，你准备的很充分。上台后先微笑，再开场白一步步来。实在紧张就喝口水，没人会怪你。加油，你可以的。</td>
             </tr>
