--- a/OpenS2S/index.html
+++ b/OpenS2S/index.html
@@ -35,10 +35,10 @@
     <br>
     <div class="is-size-5">
         <span class="author-block">
-          <h4 style="text-align: center;"><b>Authors: </b><sup>1,2</sup>Chen Wang, <sup>1,2,3</sup>Tianyu Peng, <sup>1,2</sup>Wen Yang, <sup>1,2</sup>Yinan Bai,
-            <sup>4</sup>Guangfu Wang, <sup>4</sup>Jun Lin, </h4>
-          <h4 style="text-align: center;"><sup>4</sup>Lanpeng Jia,
-            <sup>1,3</sup>Lingxiang Wu, <sup>1,2,3</sup>Jinqiao Wang, <sup>1,2</sup>Chengqing Zong, <sup>1,2,3</sup>Jiajun Zhang*</h4>
+          <h4 style="text-align: center;"><b>Authors: </b>Chen Wang<sup>1,2</sup>, Tianyu Peng<sup>1,2,3</sup>, Wen Yang<sup>1,2</sup>, Yinan Bai<sup>1,2</sup>,
+            Guangfu Wang<sup>4</sup>, Jun Lin<sup>4</sup>, </h4>
+          <h4 style="text-align: center;">Lanpeng Jia<sup>4</sup>,
+            Lingxiang Wu<sup>1,3</sup>, Jinqiao Wang<sup>1,2,3</sup>, Chengqing Zong<sup>1,2</sup>, Jiajun Zhang<sup>1,2,3*</sup></h4>
     </div>
     <br>
     <div class="is-size-5 publication-authors">
