--- a/OpenS2S/index.html
+++ b/OpenS2S/index.html
@@ -64,7 +64,7 @@
         </span>
 
         <span class="link-block">
-            <a href="" target="_blank"
+            <a href="https://arxiv.org/pdf/2507.05177v1" target="_blank"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
                 <i class="ai ai-arxiv"></i>
